--- a/trunk/Paper/PosterPaper-Evaluating GraphCololoring.tex
+++ b/trunk/Paper/PosterPaper-Evaluating GraphCololoring.tex
@@ -29,6 +29,9 @@
 \usepackage[pdftex]{graphicx}
 \usepackage[noend]{algorithmic}
 \usepackage{algorithm,xspace,paralist}
+\usepackage{wrapfig}
+
+
 
 \newcommand{\ff}{\text{First Fit}\xspace}
 \newcommand{\ffshort}{FF\xspace}
@@ -49,12 +52,9 @@
 
 \title{Evaluating Graph Coloring on GPUs}
 
-\authorinfo{Name1}
-           {Affiliation1}
-           {Email1}
-\authorinfo{Name2\and Name3}
-           {Affiliation2/3}
-           {Email2/3}
+\authorinfo{Name1\and Name2\and Name3\and Name4\and Name5}
+           {Affiliation}
+           {Email1/2/3/4/5}
 
 \maketitle
 
@@ -64,10 +64,10 @@ This paper evaluates features of graph coloring algorithms implemented on graphi
 %Overall, parallel graph coloring speeds up well for the sparse graphs we studied, commonly yielding speedups above 1000X over a baseline CPU implementation.
 \end{abstract}
 
-\category{CR-number}{subcategory}{third-level}
+%\category{CR-number}{subcategory}{third-level}
 
-\terms
-term1, term2, term3
+%\terms
+%term1, term2, term3
 
 \keywords
 Graph coloring, Parallel algorithm, CUDA
@@ -75,9 +75,16 @@ Graph coloring, Parallel algorithm, CUDA
 \section{Introduction}
 
 Graph coloring refers to the assignment of labels or colors to elements of a graph (vertices or edges) subject to certain constraints. In this paper, we consider the specific problem of assigning colors to vertices so that no two neighboring vertices (vertices connected by an edge) have the same color.  There are several known applications of graph coloring like assigning frequencies to wireless access points, time-tabling and scheduling, register allocation and printed circuit testing among others.
-In this discussion, a graph $G=(V,E)$, where $V$ is a set of $n$ vertices, and $E$ is a set of $m$ edges. The degree of a vertex $v \in V$ is denoted by $d(v)$. The maximum vertex degree of a graph is denoted by $\Delta$. Graph coloring is NP-hard, and even computing a $n^{1-\epsilon}$-approximation of the chromatic number of a graph is NP-hard \cite{zuckerman07}. Therefore, a number of heuristics have been developed to assign colors to vertices; some commonly used heuristics include First Fit\cite{}, Largest Degree Order\cite{} and Saturation Degree Order\cite{}.  These heuristics tend to trade off minimizing the number of colors and minimizing execution time but generally the faster algorithms have poor coloring quality while the slow ones tend to be better. Combinations of these algorithms have also been used to create better heuristics like the combined SDO $\&$ LDO \cite{}.
 
-This paper examines a graphics processing unit (GPU) mapping of parallel graph coloring.  Prior parallel graph coloring algorithms have been evaluated on conventional shared-memory multiprocessors [reference] or distributed systems [reference], some of which also use METIS to help the graph partitioning, but to the best of our knowledge, this is the first study of how GPU architectures affect performance gains and number of assigned colors in a parallel implementation.  Our study demonstrates that features of the GPU architecture significantly impact the algorithms selected. Specifically, the support for efficient fine-grain multithreading facilitates strong performance gains over CPU implementations because hundreds or even thousands of threads can be applied to the parallel coloring allowing us to have as few colors as the best sequential algorithm while operating nearly as fast as the fastest sequential algorithms. 
+
+In this discussion, a graph $G=(V,E)$, where $V$ is a set of $n$ vertices, and $E$ is a set of $m$ edges. The degree of a vertex $v \in V$ is denoted by $d(v)$. The maximum vertex degree of a graph is denoted by $\Delta$. Graph coloring is NP-hard, and even computing a $n^{1-\epsilon}$-approximation of the chromatic number of a graph is NP-hard \cite{zuckerman07}. Therefore, a number of heuristics have been developed to assign colors to vertices; some commonly used heuristics include First Fit, Largest Degree Order and Saturation Degree Order\cite{al2006new}.  These heuristics tend to trade off minimizing the number of colors and minimizing execution time but generally the faster algorithms have poor coloring quality while the slow ones tend to be better. Combinations of these algorithms have also been used to create better heuristics like the combined SDO $\&$ LDO \cite{al2006new}.
+
+This paper examines a graphics processing unit (GPU) mapping of parallel graph coloring.  Prior parallel graph coloring algorithms have been evaluated on conventional shared-memory multiprocessors \cite{gebremedhin2000scalable} or distributed systems \cite{bozdag2008a} but to the best of our knowledge, this is the first study of how GPU architectures affect performance gains and number of assigned colors in a parallel implementation.  Our study demonstrates that features of the GPU architecture significantly impact the algorithms selected. Specifically, the support for efficient fine-grain multithreading facilitates strong performance gains over CPU implementations. Because hundreds or even thousands of threads can be applied to the parallel coloring, we can obtain as few colors as the best sequential algorithm while operating nearly as fast as the fastest sequential algorithms. 
+
+GPUs have different architectures compared to parallel computers where most of the parallel graph-coloring algorithms are run. The main differences is that they have many processors, for example, a Tesla S1070 processor has 240 cores, but each of the cores is slower than a state-of-the-art CPU. Also, a GPU stores the data in the global memory which all the cores can readily access.
+
+
+
 
 %Graph coloring refers to the assignment of labels or colors to elements of a graph (vertices or edges) subject to certain constraints. In this paper, we consider the specific problem of assigning colors to vertices so that no two neighboring vertices (vertices connected by an edge) have the same color.  There are several known applications of graph coloring like assigning frequencies to wireless access points, time-tabling and scheduling, register allocation and printed circuit testing, iterative solution of sparse linear systems [], preconditions [], sparse tiling [], and eigenvalue computation [].  
 
@@ -91,17 +98,17 @@ This paper examines a graphics processing unit (GPU) mapping of parallel graph c
 
 %The remainder of this paper is structured as follows: we first review previous graph coloring work will be presented.  The following section discusses the details of the parallel algorithm and the coloring heuristics we evaluated.  We present extensive experimental results followed by a conclusion.
 
-\section{Target platform}
-GPUs have different architectures compared to parallel computers where most of the parallel graph-coloring algorithms are run. The main differences and how they impact on algorithm are described below:
-\renewcommand{\labelenumi}{\roman{enumi}) } 
-\begin{enumerate}
- \item Number of processors: Graphics cards have many processors: an NVIDIA GTX 260 has 192 cores while a Tesla S1070 processor has 240 cores. This allows us to have much more parallelism (and having many more threads running at the same time) compared to other architectures. Moreover, as thread creation is inexpensive on a GPU, we will be running a lot to fully use the power of the GPU. Consequently our algorithm will be using many more threads than existing algorithms.
-
-\item Processor speed: While a state-of-the-art processor typically operates at around 3 GHz processor cores on GPUs are much slower: one core on a GTX 260 operates at 1242 MHz while a core on a Tesla S1070 operates between 1.296 to 1.44  GHz. Hence we need to use the many threads to match or better the speed of a standard CPU. Moreover, trying to get speedups for  O(N) algorithms are hard as the cores are individually slower and some time is wasted copying data to and from the GPU
-
-\item Memory: The memory available to parallel computers is normally bigger but it is sharing data between processors is usually much more expensive. On a GPU, all the data can be stored in the global memory and all the cores can readily access it.
-
-\end{enumerate}
+%\section{Target platform}
+%GPUs have different architectures compared to parallel computers where most of the parallel graph-coloring algorithms are run. The main differences and how they impact on algorithm are described below:
+%\renewcommand{\labelenumi}{\roman{enumi}) } 
+%\begin{enumerate}
+% \item Number of processors: Graphics cards have many processors: an NVIDIA GTX 260 has 192 cores while a Tesla S1070 processor has 240 cores. This allows us to have much more parallelism (and having many more threads running at the same time) compared to other architectures. Moreover, as thread creation is inexpensive on a GPU, we will be running a lot to fully use the power of the GPU. Consequently our algorithm will be using many more threads than existing algorithms.
+%
+%\item Processor speed: While a state-of-the-art processor typically operates at around 3 GHz processor cores on GPUs are much slower: one core on a GTX 260 operates at 1242 MHz while a core on a Tesla S1070 operates between 1.296 to 1.44  GHz. Hence we need to use the many threads to match or better the speed of a standard CPU. Moreover, trying to get speedups for  O(N) algorithms are hard as the cores are individually slower and some time is wasted copying data to and from the GPU
+%
+%\item Memory: The memory available to parallel computers is normally bigger but it is sharing data between processors is usually much more expensive. On a GPU, all the data can be stored in the global memory and all the cores can readily access it.
+%
+%\end{enumerate}
 
 %\section{ Related Work}
 %In this section we give an overview of existing graph coloring algorithms, both sequential and parallel.  In this discussion, a graph $G=(V,E)$, where $V$ is a set of $n$ vertices, and $E$ is a set of $m$ edges. The degree of a vertex $v \in V$ is denoted by $d(v)$. The maximum vertex degree of a graph is denoted by $\Delta$.
@@ -168,6 +175,8 @@ GPUs have different architectures compared to parallel computers where most of t
 %\end{inparaenum}
 
 
+
+
 \section{Algorithm}
 
 In this paper, we propose a framework based on the \gm algorithm \cite{gebremedhin2000scalable}, which is adapted for an NVIDIA GPU platform.  In addition, two new heuristics are proposed to match the parallelism exploited by the GPU, which are shown to give better results than existing heuristics such as FF and SDO. 
@@ -179,7 +188,7 @@ In this paper, we propose a framework based on the \gm algorithm \cite{gebremedh
 \begin{algorithmic}
 \REQUIRE {$1 \: : \: Graph \: Partitioning - CPU$}
     \STATE{ \mbox{Logically partition graph into subgraphs}}
-	\STATE{ \mbox{Indentify boundary nodes}}
+	\STATE{ \mbox{Identify boundary nodes}}
 	\STATE{ \mbox{Count neighbors outside the subgraph for each vertex}}
 \newline
 	
@@ -197,6 +206,7 @@ In this paper, we propose a framework based on the \gm algorithm \cite{gebremedh
 \end{algorithmic}\
 \end{algorithm}
 
+
 \textbf{Phase 1: Graph Partitioning:}
 The graph is initially padded with empty nodes so that it is exactly divisible by the total number of threads. Each thread equally takes $N/p$ vertices, which is a load-balanced approach.\\
 
@@ -208,13 +218,13 @@ The graph is initially padded with empty nodes so that it is exactly divisible b
 Each thread assigns colors to its subgraph but checks the whole graph before allocating colors. We tried four heuristics for color allocation:
 \renewcommand{\labelenumi}{\roman{enumi}) } 
 \begin{enumerate}
-  \item First Fit
-  \item SDO $\&$ LDO
-  \item MAX OUT
-  \item MIN OUT
+  \item First Fit: Allocate the smallest possible color to each vertex
+  \item SDO $\&$ LDO: Color is allocated to the vertex having the highest saturation and then highest degree
+  \item MAX OUT: Color is allocated to the vertex having most neighbors out of the subgraph and then highest degree
+  \item MIN OUT: Color is allocated to the vertex having fewest neighbors out of the subgraph and then highest degree
 \end{enumerate}
 
-The MAX OUT and MIN OUT algorithm work like the SDO $\&$ LDO except that where the latter uses saturation to decide which node to color first, MAX OUT uses the maximum number of neighbors of a vertex out of the latter's subgraph and MIN OUT uses the minimum number of neighbors outside of the subgraph respectively. For all of the 4 heuristics, when we have chosen a vertex to color, we consider all the neighbors of the latter both inside and outside the subgraph when allocating colors.\\
+For all of the 4 heuristics, when we have chosen a vertex to color, we consider all the neighbors of the latter both inside and outside the subgraph when allocating colors.\\
 
 %
 %First Fit and SDO $\&$ LDO have already bee described in Section 3.1. We will focus on the 2 new heuristics we have devised:\\
@@ -275,7 +285,7 @@ The MAX OUT and MIN OUT algorithm work like the SDO $\&$ LDO except that where t
 \textbf{Phase 3: Conflicts Detection}\
 Given that coloring is being done in parallel, conflicts occur frequently. They are identified by assigning one thread per boundary node that checks whether there is a conflict with one of its neighbors. If that happens, the color of that node is reset to NULL.\
 
-Dropping to the CPU to solve the conflicts is common in many approaches but given that we have many small partitions, we tend to have lots of conflicts and resolving that on the CPU can be quite slow. So we do several passes of coloring and conflict detection until we have few conflicts which can be quickly solved sequentially on the CPU. 
+Dropping to the CPU to solve the conflicts is common in many approaches but given that we have many small partitions, we tend to have lots of conflicts and resolving that on the CPU can be quite slow. So we do several passes of coloring and conflict detection on GPU until we have few conflicts which can be quickly solved sequentially on the CPU. 
 
 
 \section{Experiments and Results}
@@ -288,7 +298,7 @@ The algorithm has been implemented using the CUDA API and the tests were carried
 %\end{itemize}
 
 
-The tests were carried out on different categories of real graphs from the University of Florida Sparse Matrix Collection []. In this paper we will focus on 3 graphs from the Civil Engineering domain as shown in Table~\ref{tbl:properties}
+The tests were carried out on different categories of real graphs from the University of Florida Sparse Matrix Collection \cite{uofMatrix}. In this paper we will focus on 3 graphs from the Civil Engineering domain as shown in Table~\ref{tbl:properties}
 
 \begin{table}
 \scriptsize
@@ -377,8 +387,8 @@ pkustk13 & 94,893 & 3,260,967 & 299 & 68 & 57 & 51 & 66 & 612960\\
 %\end{table}
 
 
-While the colors are accurate, the timing information for the sequential SDO $\&$ LDO could have been improved. The latter has is from a naive implementation which is quite inefficient. Nevertheless, the sequential SDO $\&$ LDO has been reported by its authors [...] to be O (N$^2$) and despite yielding a good coloring is quite slow. On the other hand, First Fit which is fast yields a poor coloration!\
-Ideally what we would really want is a fast algorithm that generates as few colors as possible.
+%While the colors are accurate, the timing information for the sequential SDO $\&$ LDO could have been improved. The latter has is from a naive implementation which is quite inefficient. Nevertheless, the sequential SDO $\&$ LDO has been reported by its authors [...] to be O (N$^2$) and despite yielding a good coloring is quite slow. On the other hand, First Fit which is fast yields a poor coloration!\
+%Ideally what we would really want is a fast algorithm that generates as few colors as possible.
 
            
 \subsection{Results}
@@ -431,7 +441,7 @@ To investigate the impact of parallel graph coloring algorithms on  both perform
 %  \caption{ Structural }
 %\end{figure*}
 
-\begin{figure*}[t]
+\begin{figure*}
   \includegraphics[scale=0.34]{figures/civilLand.png}
   \caption{ Civil }
   \label{fig:results}
@@ -458,20 +468,18 @@ To investigate the impact of parallel graph coloring algorithms on  both perform
 %METIS is a set of algorithms that can be used to partition a graph into subgraphs. Many parallel graph algorithms advise the use of METIS to have better partitioning. However these algorithms run on parallel machines and they do not divide graphs in as many partitions as we do. Consequently when we tried to run METIS to partition the graph as we need, the resulting partitions were very unbalanced. The figure below shows the subgraph sizes from metis.
 
 
-\subsection{Conclusion}
-
-\subsection{Reference}
-
+\section{Conclusion}
+Though our GPU implementation is slower than the reported fastest Sequential Graph Coloring algorithm, in terms of color quality, we are much better; we sometimes even beat the sequential SDO $\&$ LDO as well as colors reported in \citet{bozdag2008a}.
 
 
-\appendix
-\section{Appendix Title}
-
-This is the text of the appendix, if you need one.
-
-\acks
-
-Acknowledgments, if needed.
+%\appendix
+%\section{Appendix Title}
+%
+%This is the text of the appendix, if you need one.
+%
+%\acks
+%
+%Acknowledgments, if needed.
 
 % We recommend abbrvnat bibliography style.
 
